--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
 
-        <h1 class="site-title">Air Jordan Store - Fetch Products from Google Sheet </h1>
+        <h1 class="site-title">รายการสินค้า(ดึงจาก google sheet)</h1>
         <div class="products-grid"></div>
 
         <!-- Aos js -->
