--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </body>
 
     <footer>
-        <p>Powered by Kuviro</p>
-        <p>&copy; 2022 - Air Jordan Store</p>
+        <p>โดยครูวิโรจน์  พรมพัง</p>
+        <p>&copy; 2022 - จากร้านกันเอง</p>
     </footer>
 </html>
 
